still not working

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "128": "icon128.png"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "https://vinuni.instructure.com/*"
   ],
   "background": {
     "scripts": ["background.js"],
@@ -26,7 +27,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://vinuni.instructure.com/*"],
       "js": ["content.js"]
     }
   ]
