--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,22 @@
 {
   "manifest_version": 3,
-  "name": "vinuni_chatbot",
+  "name": "VinUni Chatbot",
   "version": "1.0",
-  "description": "Your description here",
+  "description": "A simple chatbot extension.",
   "icons": {
     "48": "icon48.png"
   },
   "action": {
-    "default_icon": "icon48.png",
+    "default_icon": {
+      "48": "icon48.png"
+    },
     "default_popup": "popup.html"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
   ]
 }
