--- a/popup/manifest.json
+++ b/popup/manifest.json
@@ -34,7 +34,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://vinuni.instructure.com/*"],
       "js": ["contentScripts.js"]
     }
   ]
