finally make an iframe fit

--- a/sidepanel/manifest.json
+++ b/sidepanel/manifest.json
@@ -11,6 +11,15 @@
     "48": "icon48.png",
     "128": "icon128.png"
   },
+
+  "action": {
+ "default_title": "Click to open panel"
+  },
+
+  "side_panel": {
+  "default_path": "popup.html"
+  },
+
   "permissions": [
     "activeTab",
     "sidePanel"],
